Projects/challenges/netchix/flask_app/static/style.css
/* ******* Roots ******* */
:root {
    --primary-color: #ffc0cb;
    --primary-font-family: 'Bebas Neue', sans-serif;
}

/* ********Web Page Code******* */
* {
    margin: 0;
    padding: 0;
}

html,
body {
    min-height: 100%;
}

body {
    min-height: 100vh;
    background-color: black;
}


/* ALL contents */
.outer_container {
    margin: (0, 0, 0, 0);
    min-height: 600px;
    background-color: #dba0aa;
    background-image: url('../static/images/background_movies.jpeg');
    background-repeat: no-repeat;
    /* filter: brightness(0.5);  */
    /* WILL NEED BRIGHTNESS FILTER LATER */
    background-size: 100%;
}

.nav_bar {
    display: flex;
    align-items: center;
}

/* ###### netchix logo ####### */
.left_nav {
    position: relative;

    width: 70%;
    padding: 14px 16px;
    font-size: 17px;
}

.netchix_logo {
    font-family: 'Bebas Neue', sans-serif;
    font-weight: 100;
    color: var(--primary-color);
    font-size: 400%;
    margin-left: 2%;
}


/* ###### Right Navigation Bar ####### */
.right_nav {
    position: relative;
    width: 40%;
    height: auto;
    display: flex;
    margin-left: 30%;
}


#language {
    margin-right: 2%;
    height: 130%;
    border-radius: 5px;
    border-width: 0cap;

    background-color: transparent;
    color: white;
}

.sign_in {
    margin-left: 5%;
}

#sign_in_button {
    padding: 3%;
    width: 140%;
    height: 130%;
    border-radius: 5px;

    background-color: var(--primary-color);
    color: white;
    font-weight: 550;
    border-color: #dba0aa;
    
    /* Need to add hover */
}

/* ###### Main title ###### */

.main_title_container{
    display: flex;
    height: 500px;
    text-align: center;
}

.main_title{
    width: 50%;
    margin: auto;
    color: white;
}

.header_1{
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 700;
    margin: auto;
}

.header_2{
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 300;
    margin-top: 5%;
}

